[package]
name = "qtablepdf"
version = "0.1.0"
authors = ["foundrysheets <48253418+foundrysheets@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
printpdf = "0.2.11"
itertools-num = "0.1.3"
regex = "1.2.1"
lazy_static = "1.4.0"
num = "0.2.0"
enumflags2 = "0.6.2"
chrono = "0.4.10"




